<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/hedgehog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="80dp"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:rotationY="30"
            android:text="@string/hedgehog"
            android:textColor="#FFFFFF"
            android:textSize="47sp"
            android:textStyle="bold"
            android:translationZ="9dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="fill_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:elevation="5dp"
                android:src="@drawable/penguin_hello" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="100"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="#FFFFFF"
                android:textSize="72sp"
                android:textStyle="bold"
                android:translationZ="9dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:elevation="5dp"
                android:src="@drawable/hedgehog_hello" />
        </LinearLayout>


        <TextView
            android:id="@+id/penguin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:rotationY="-30"
            android:text="@string/penguins"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="#FFFFFF"
            android:onClick="start"
            android:padding="7dp"
            android:text="@string/start"
            android:textColor="#64DD17"
            android:textSize="18sp"
            android:translationZ="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/author"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </LinearLayout>
</RelativeLayout>